# C-_PokerGame

./: .editorconfig  .gitignore  CMakeLists.txt  Poker.slnx  README.md  UpgradeLog.htm
Client/: Client.vcxproj
Client/src/: GameState.h  GameStateParser.cpp  GameStateParser.h  main.cpp
Client/src/Network/: NetworkClient.cpp  NetworkClient.h  packateManager.cpp  packateManager.h
Client/src/UI/: UI.cpp  UI.h
FrontEnd/MainFrontEnd/: UI.cpp
FrontEnd/UI/: UI.sln  UpgradeLog.htm
FrontEnd/UI/UI/: UI.cpp  UI.rc  UI.vcxproj
FrontEnd/UI/UI/x64/Debug/: UI.res
Poker/src/: main.cpp
Server/: Server.vcxproj
Server/src/: Application.cpp  Application.h  NetworkManager.h  main.cpp
Server/src/Network/: networkManager.cpp  networkManager.h
Server/src/core/: logging.h  result.h
Server/src/game/: GameStructures.h  GameTable.cpp  GameTable.h  gameManager.h  gameState.h  player.h  room.cpp  room.h  roomManager.cpp  roomManager.h
Server/src/messageHandlers/: createGameRequestHandler.cpp  createGameRequestHandler.h  joinGameRequestHandler.h  playerActionRequestHandler.cpp  playerActionRequestHandler.h  requestHandler.h
handler/: requestHandler.h
